@@ -33,16 +33,8 @@ operator|.
 name|util
 operator|.
 name|Map
-import|;
-end_import
-
-begin_import
-import|import
-name|java
 operator|.
-name|util
-operator|.
-name|Iterator
+name|Entry
 import|;
 end_import
 
@@ -1213,49 +1205,40 @@ operator|.
 name|setDeprecatedProperties
 argument_list|()
 expr_stmt|;
-name|Iterator
-name|it
+name|int
+name|lenLimit
 init|=
 name|conf
 operator|.
-name|iterator
-argument_list|()
+name|getInt
+argument_list|(
+literal|"stream.jobconf.truncate.limit"
+argument_list|,
+operator|-
+literal|1
+argument_list|)
 decl_stmt|;
-while|while
-condition|(
-name|it
-operator|.
-name|hasNext
-argument_list|()
-condition|)
+for|for
+control|(
+name|Entry
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|confEntry
+range|:
+name|conf
+control|)
 block|{
-name|Map
-operator|.
-name|Entry
-name|en
-init|=
-operator|(
-name|Map
-operator|.
-name|Entry
-operator|)
-name|it
-operator|.
-name|next
-argument_list|()
-decl_stmt|;
 name|String
 name|name
 init|=
-operator|(
-name|String
-operator|)
-name|en
+name|confEntry
 operator|.
 name|getKey
 argument_list|()
 decl_stmt|;
-comment|//String value = (String)en.getValue(); // does not apply variable expansion
 name|String
 name|value
 init|=
@@ -1274,6 +1257,48 @@ argument_list|(
 name|name
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|lenLimit
+operator|>
+operator|-
+literal|1
+operator|&&
+name|value
+operator|.
+name|length
+argument_list|()
+operator|>
+name|lenLimit
+condition|)
+block|{
+name|LOG
+operator|.
+name|warn
+argument_list|(
+literal|"Environment variable "
+operator|+
+name|name
+operator|+
+literal|" truncated to "
+operator|+
+name|lenLimit
+operator|+
+literal|" to  fit system limits."
+argument_list|)
+expr_stmt|;
+name|value
+operator|=
+name|value
+operator|.
+name|substring
+argument_list|(
+literal|0
+argument_list|,
+name|lenLimit
+argument_list|)
+expr_stmt|;
+block|}
 name|envPut
 argument_list|(
 name|env
